@@ -598,6 +598,7 @@
     "*://*.tennessean.com/*",
     "*://*.tes.com/*",
     "*://*.the-american-interest.com/*",
+    "*://*.the-tls.co.uk/*",
     "*://*.theadvocate.com.au/*",
     "*://*.theadvocate.com/*",
     "*://*.theage.com.au/*",
